--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -2,7 +2,7 @@
   text-align: center;
   position: relative;
   width: 100%;
-  margin-top: 30em;
+  margin-top: 10em;
 }
 
 .footer p {
