--- a/frontend/src/components/Start/Start.css
+++ b/frontend/src/components/Start/Start.css
@@ -11,7 +11,6 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  padding: 20px;
   background-size: cover;
   width: 100vw;
   height: 100vh;
@@ -19,7 +18,7 @@
 }
 
 .s-container {
-  height: 20px;
+  height: 20ox;
   width: 20em;
   position: absolute;
   transform: translate(-50%, -50%);
@@ -44,7 +43,7 @@
 
 .sleepy-wrapper {
   position: relative;
-  top: 14em;
+  top: 1em;
   height: 10em;
   max-height: 100vh;
 }
@@ -188,7 +187,7 @@
   font-size: 1.5rem;
   font-family: inherit;
   position: absolute;
-  top: 38em;
+  top: 29em;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -217,7 +216,7 @@
   .start-button {
     font-size: 1.25rem;
     padding: 1em 1.5em;
-    top: 33em;
+    top: 24em;
   }
 }
 
@@ -244,7 +243,7 @@
   .start-button {
     font-size: 1.1rem;
     padding: 0.8em 1.2em;
-    top: 36em;
+    top: 23em;
     width: 50%;
   }
 
@@ -272,24 +271,24 @@
   }
 
   .s-container .z-1 {
-    bottom: 30px;
-    right: 14em;
+    bottom: 10em;
+    right: 15em;
   }
 
   .s-container .z-2 {
-    bottom: 0.7em;
-    right: 16em;
+    bottom: 12em;
+    right: 17em;
   }
 
   .s-container .z-3 {
-    bottom: 0.1em;
-    right: 15em;
+    bottom: 9em;
+    right: 16em;
   }
 
   .start-button {
     font-size: 0.8rem;
     padding: 0.8em 1.2em;
-    top: 42em;
+    top: 27em;
     width: 50%;
   }
 
